--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ discord = "^1.7.3"
 replit = "^3.2.4"
 yfinance = "^0.1.70"
 requests = "^2.28.0"
+ratelimit = "^2.2.1"
+backoff = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 
